updated all routes

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,9 +1,9 @@
 :root {
-  --primary: #e4b363;
-  --secondary: #ef6461;
-  --tertiary: #fffd8c;
-  --quaternary: #e0dfd5;
-  --quinary: #fcf83b;
+  --primary: #7dc9c9;
+  --secondary: #4a77ca;
+  --tertiary: #ff8cf5;
+  --quaternary: #e0d5e0;
+  --quinary: #cfb6cf;
   --light: #e8e9eb;
   --dark: #313638;
   --border-radius: 1.5rem;
